DTOs, CORS y otras correcciones